--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_review.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_review.xml
@@ -1,9 +1,264 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".review">
+    tools:context=".review"
+    android:orientation="vertical"
+    android:background="#F5F5F5">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="#1E90FF"
+        >
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="点评"
+            android:gravity="center"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:padding="10dp"
+            android:textSize="25sp"
+            android:layout_weight="1"
+            ></TextView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </LinearLayout>
+    <TextView
+        android:id="@+id/review_hotelname"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="现代轻奢loft复式3卧 恒生万鹏广场"
+        android:textColor="#000"
+        android:layout_margin="10dp"
+        android:textStyle="bold"
+        android:textSize="25sp"
+        ></TextView>
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:background="#fff"
+    android:layout_marginBottom="10dp"
+    >
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="入住评分"
+        android:textColor="#000"
+        android:textStyle="bold"></TextView>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:text="卫生"
+            android:textSize="20sp"
+            ></TextView>
+        <ImageButton
+            android:id="@+id/weisheng1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            android:layout_marginLeft="50dp"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/weisheng2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/weisheng3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/weisheng4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/weisheng5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:text="环境"
+            android:textSize="20sp"
+            ></TextView>
+        <ImageButton
+            android:id="@+id/huanjing1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            android:layout_marginLeft="50dp"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/huanjing2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/huanjing3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/huanjing4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/huanjing5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:text="服务"
+            android:textSize="20sp"
+            ></TextView>
+        <ImageButton
+            android:id="@+id/fuwu1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            android:layout_marginLeft="50dp"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/fuwu2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/fuwu3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/fuwu4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/fuwu5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="5dp">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textStyle="bold"
+            android:textColor="#000"
+            android:text="设施"
+            android:textSize="20sp"
+            ></TextView>
+        <ImageButton
+            android:id="@+id/sheshi1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            android:layout_marginLeft="50dp"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/sheshi2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/sheshi3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/sheshi4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+        <ImageButton
+            android:id="@+id/sheshi5"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/favorite"
+            ></ImageButton>
+    </LinearLayout>
+</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="10dp"
+        android:background="#fff"
+        >
+        <EditText
+            android:id="@+id/review_edit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:minLines="5"
+            android:background="#E5E5E5"
+            android:hint="请填写您的评论。。。"
+            ></EditText>
+    </LinearLayout>
+    <Button
+        android:id="@+id/review_submit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:text="提交"
+        android:textColor="#fff"
+        android:textStyle="bold"
+        android:background="#1E90FF"></Button>
+
+</LinearLayout>
