--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_hotelpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_hotelpage.xml
@@ -425,7 +425,7 @@
                 android:layout_height="wrap_content"
                 >
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
                     <ListView
                         android:id="@+id/hotelpage_reviewlist"
