--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/review_item.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/review_item.xml
@@ -1,54 +1,98 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:orientation="vertical" android:layout_width="match_parent"-->
+<!--    android:layout_height="wrap_content">-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:layout_margin="10dp">-->
+
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:background="#F5F5F5"-->
+<!--            android:orientation="horizontal"-->
+<!--            >-->
+<!--            <ImageView-->
+<!--                android:id="@+id/hotelpage_avatar"-->
+<!--                android:layout_width="50dp"-->
+<!--                android:layout_height="50dp"-->
+<!--                android:src="@drawable/avatar"-->
+<!--                android:layout_margin="10dp"-->
+<!--                android:layout_gravity="center"></ImageView>-->
+
+<!--            <LinearLayout-->
+<!--                android:layout_width="match_parent"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                android:layout_margin="10dp">-->
+<!--                <TextView-->
+<!--                    android:id="@+id/hotelpage_username"-->
+<!--                    android:layout_width="wrap_content"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="clk111"-->
+<!--                    android:textColor="#000"-->
+<!--                    android:textStyle="bold"-->
+
+<!--                    ></TextView>-->
+
+<!--                <TextView-->
+<!--                    android:id="@+id/hotelpage_pinglun"-->
+<!--                    android:layout_width="match_parent"-->
+<!--                    android:layout_height="wrap_content"-->
+<!--                    android:text="房子很好，孩子很喜欢，下次还会来1111111111111111111111111111111111111111111111"-->
+<!--                    android:textColor="#000"-->
+<!--                    android:layout_marginTop="5dp"-->
+<!--                    ></TextView>-->
+<!--            </LinearLayout>-->
+<!--        </LinearLayout>-->
+
+
+<!--    </LinearLayout>-->
+
+<!--</LinearLayout>-->
+
+<!--<?xml version="1.0" encoding="utf-8"?>-->
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+android:orientation="vertical" android:layout_width="match_parent"
+android:layout_height="wrap_content">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    >
+    <ImageView
+        android:id="@+id/hotelpage_avatar"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:src="@drawable/avatar"
+        android:layout_margin="10dp"
+        android:layout_gravity="center"></ImageView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_margin="10dp">
+        android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
+        <TextView
+            android:id="@+id/hotelpage_username"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="#F5F5F5"
-            android:orientation="horizontal"
-            >
-            <ImageView
-                android:id="@+id/hotelpage_avatar"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:src="@drawable/avatar"
-                android:layout_margin="10dp"
-                android:layout_gravity="center"></ImageView>
+            android:text="clk111"
+            android:textColor="#000"
+            android:textStyle="bold"
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:layout_margin="10dp">
-                <TextView
-                    android:id="@+id/hotelpage_username"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="clk111"
-                    android:textColor="#000"
-                    android:textStyle="bold"
+            ></TextView>
 
-                    ></TextView>
-
-                <TextView
-                    android:id="@+id/hotelpage_pinglun"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="房子很好，孩子很喜欢，下次还会来1111111111111111111111111111111111111111111111"
-                    android:textColor="#000"
-                    android:layout_marginTop="5dp"
-                    ></TextView>
-            </LinearLayout>
-        </LinearLayout>
-
-
+        <TextView
+            android:id="@+id/hotelpage_pinglun"
+            android:layout_width="match_parent"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="房子很好，孩子很喜欢，下次还会来1111111111111111111111111111111111111111111111"
+            android:textColor="#000"
+            android:layout_marginTop="5dp"
+            ></TextView>
     </LinearLayout>
-
+</LinearLayout>
 </LinearLayout>
