--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_spec_searchdetail.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/home_spec_searchdetail.xml
@@ -6,28 +6,19 @@
     android:layout_margin="15dp"
     android:id="@+id/home_spec_searchdetail_Lin"
     >
+
     <EditText
+        android:id="@+id/search_edit_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="全球城市/区域/位置"
-        android:textColor="#000"
-        ></EditText>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="入住日期"
-        ></EditText>
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="关键字/位置/民宿名"
+        android:hint="民宿名"
         ></EditText>
     <Button
-        android:id="@+id/search"
+        android:id="@+id/search_btn_name"
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="45dp"
-        android:text="查询特价房源"
+        android:text="转到该民宿"
         android:gravity="center"
         android:textColor="#fff"
         android:background="#000"
