--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_homepage.xml
@@ -36,7 +36,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="国内·港澳台·海外"
+                    android:text="地区搜索"
                     android:background="#1E90FF"
                     android:textColor="#fff"
                     android:textSize="20sp"
@@ -46,7 +46,7 @@
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
-                    android:text="特价"
+                    android:text="民宿名搜索"
                     android:textColor="#fff"
                     android:textSize="20sp"
                     android:background="#1E90FF"
@@ -73,13 +73,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/hot"
-            android:layout_marginTop="400dp"
+            android:layout_marginTop="280dp"
             ></ImageView>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:layout_marginTop="480dp"
+            android:layout_marginTop="350dp"
             >
             <ListView
                 android:id="@+id/home_list1"
