--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/activity_userpage.xml
@@ -59,53 +59,53 @@
                 ></ImageView>
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        >
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        >-->
 
-        <Button
-            android:id="@+id/userpage_favorite"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:background="#00000000"
-            android:gravity="left"
-            android:paddingTop="10dp"
-            android:text="我的收藏"
-            android:textColor="#000"
-            android:textSize="20sp"
-            android:textStyle="bold"></Button>
+<!--        <Button-->
+<!--            android:id="@+id/userpage_favorite"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="20dp"-->
+<!--            android:background="#00000000"-->
+<!--            android:gravity="left"-->
+<!--            android:paddingTop="10dp"-->
+<!--            android:text="我的收藏"-->
+<!--            android:textColor="#000"-->
+<!--            android:textSize="20sp"-->
+<!--            android:textStyle="bold"></Button>-->
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#DCDCDC"
-        >
+<!--    <View-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="2dp"-->
+<!--        android:background="#DCDCDC"-->
+<!--        >-->
 
-    </View>
-    <Button
-        android:id="@+id/userpage_info"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="常用信息"
-        android:textSize="20sp"
-        android:textColor="#000"
-        android:textStyle="bold"
-        android:background="#00000000"
-        android:paddingTop="10dp"
-        android:layout_marginLeft="20dp"
-        android:gravity="left"
-        ></Button>
+<!--    </View>-->
+<!--    <Button-->
+<!--        android:id="@+id/userpage_info"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="常用信息"-->
+<!--        android:textSize="20sp"-->
+<!--        android:textColor="#000"-->
+<!--        android:textStyle="bold"-->
+<!--        android:background="#00000000"-->
+<!--        android:paddingTop="10dp"-->
+<!--        android:layout_marginLeft="20dp"-->
+<!--        android:gravity="left"-->
+<!--        ></Button>-->
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text=""
-        ></TextView>
+<!--    <TextView-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text=""-->
+<!--        ></TextView>-->
     <Button
         android:id="@+id/userpage_wantbeowner"
         android:layout_width="match_parent"
