--- a/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/review_item.xml
+++ b/20191316008cuiliangkunGraduationProject/app/src/main/res/layout/review_item.xml
@@ -83,6 +83,102 @@ android:layout_height="wrap_content">
             android:textStyle="bold"
 
             ></TextView>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="卫生"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:textSize="15sp"
+                ></TextView>
+            <TextView
+                android:id="@+id/hotelpage_pweisheng"
+                android:textSize="10sp"
+
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginLeft="3dp"
+                android:text="5.0"
+                android:textColor="#000"
+                android:textStyle="bold"></TextView>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="环境"
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:textSize="15sp"
+
+                ></TextView>
+            <TextView
+                android:id="@+id/hotelpage_phuanjing"
+                android:layout_width="0dp"
+                android:textSize="10sp"
+
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginLeft="3dp"
+                android:text="5.0"
+                android:textColor="#000"
+                android:textStyle="bold"></TextView>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="服务"
+                android:textColor="#000"
+                android:textSize="15sp"
+
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                ></TextView>
+            <TextView
+                android:id="@+id/hotelpage_pfuwu"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginLeft="3dp"
+                android:text="5.0"
+                android:textSize="10sp"
+
+                android:textColor="#000"
+                android:textStyle="bold"></TextView>
+            <TextView
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="设施"
+                android:textSize="15sp"
+
+                android:textColor="#000"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                ></TextView>
+            <TextView
+                android:id="@+id/hotelpage_psheshi"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:layout_marginLeft="3dp"
+                android:textSize="10sp"
+
+                android:text="5.0"
+                android:textColor="#000"
+                android:textStyle="bold"></TextView>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/hotelpage_pinglun"
